Fixed Uneven Image Proportions

--- a/css/generatePost.css
+++ b/css/generatePost.css
@@ -81,10 +81,11 @@
 
 .medium-media {
     flex-direction: row;
+    width: 50vmax;
 }
 
 .medium-media img, .medium-media video {
-    width: 100%;
+    max-width: 100%;
     height: 100%;
 }
 
@@ -94,7 +95,7 @@
 
 .big-media {
     height: 25vmax;
-    width: 100%;
+    max-width: 100%;
     object-fit: cover;
 }
 
@@ -103,7 +104,7 @@
 }
 
 .small-media-2 img, .small-media-2 video {
-    width: 100%;
+    width: 20vmax;
     height: 12.25vmax;
 }
 
@@ -114,11 +115,13 @@
 .container-4 {
   display: flex;
   flex-direction: row;
+  width: 50vmax;
 }
 
 .row {
   display: flex;
   flex-direction: column;
+  width: 100%;
 }
 
 .col {
@@ -126,8 +129,8 @@
 }
 
 .col img, .col video {
-    width: 100%;
     height: 15vmax;
+    width: 100%;
 }
 
 /* [END] 4 IMAGES*/
